--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -15,8 +15,8 @@
     <div class="carousel-item">
       <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603922036/Tanzania_white_xrns7y.jpg", class: "gg d-block w-100 gg" %>
     </div>
-    <div class="carousel-caption d-none d-md-block">
-    <h3>Sustainability</h3>
+    <div class="carousel-caption  d-md-block">
+    <h1>Sustainability</h1>
     <p>Lorem ipsum dolor sit amet</p>
   </div>
   </div>
