--- a/app/views/staff/show.html.erb
+++ b/app/views/staff/show.html.erb
@@ -6,9 +6,9 @@
       <div class="medium-5 columns">
         <%= cl_image_tag @staff.image.key, class: "staff-image" %>
       </div>
-      <div class="medium-7 columns staff-job-desc ">
+      <div class="medium-7 columns staff-job-desc">
         <h2 class="main-col"> <%= @staff.f_name %> <br> <%= @staff.l_name %></h2>
-        <h5 > <%= @staff.job_title %></h5>
+        <h3 class="white"> <%= @staff.job_title %></h3>
         <h4> Something ought to fill this space, let's try it out </h4>
       </div>
     </div>
