--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -35,13 +35,15 @@
   text-align: center;
   align-items: center;
   width: 100%;
+  max-width: 500px;
   object-fit: cover;
   border-radius: 5px;
+  max-height: 400px;
 }
 
 
 .staff-job-desc {
-  padding: 0 24px;
+  margin: 0 auto;
 }
 
 .team-bio-header{
