series of changes

--- a/app/views/pages/design.html.erb
+++ b/app/views/pages/design.html.erb
@@ -15,8 +15,8 @@
     <div class="carousel-item">
       <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604009347/Rwanda_roads_ktn1gn.jpg", class: "gg d-block w-100 gg" %>
     </div>
-    <div class="carousel-caption d-none d-md-block">
-    <h3 class="gg">Design</h3>
+    <div class="carousel-caption d-md-block">
+    <h1 class="gg">Design</h1>
     <p>Lorem ipsum dolor sit amet</p>
   </div>
   </div>
