--- a/app/views/pages/transformation.html.erb
+++ b/app/views/pages/transformation.html.erb
@@ -15,8 +15,8 @@
     <div class="carousel-item">
       <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604007344/New_York_fms682.jpg", class: "d-block w-100" %>
     </div>
-    <div class="carousel-caption d-none d-md-block">
-    <h3>Transformation</h3>
+    <div class="carousel-caption d-md-block">
+    <h1>Transformation</h1>
     <p>Lorem ipsum dolor sit amet</p>
   </div>
   </div>
@@ -39,7 +39,7 @@
     <br><br>
     BisImpact sees embracing change and transforming instiutions to be societal impact friendly/public good considering as central to collective success. Big institutions have seen a consolidation of their power; and as a result, small changes will have significant material impacts.</p>
     <br>
-    <h3 class="text-center">We work with institutions to identify existing processes that can rapidly be adapted to have wider positive social multipliers, and simultaneously ensure efficiency in service/product delivery.</h3>
+    <h3 class="text-center">We work with institutions to identify existing processes that can rapidly be adapted to have wider positive social multipliers, and simultaneously ensure efficiency in service and product delivery.</h3>
   </div>
   <br>
 </div>
