--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -77,7 +77,7 @@ html,body
 }
 .text-big {
   text-align: center;
-  padding: 80px;
+  padding: 60px;
   h2 {
     font-size: 4.5em;
     color: $main-color;
@@ -106,6 +106,7 @@ html,body
   background-size: auto;
   background-position: center;
   position: relative;
+  margin-top: 0px;
 }
 .grid-box-image-long {
   width: 100%;
@@ -126,7 +127,6 @@ html,body
   position: relative;
   width: 100%;
   height: 420px;
-  margin-top: 20px;
   overflow: hidden;
 }
 .box-top-right-image {
@@ -152,7 +152,6 @@ html,body
   width: 100%;
   height: 290px;
   overflow: hidden;
-  margin-bottom: 20px;
 }
 .grid-bottom-image {
   width: 100%;
@@ -263,7 +262,7 @@ right: 20px;
     width: 240px;
   }
   .text-big {
-    padding: 10px;
+    padding: 30px;
     h2 {
       font-size: 1.4em;
     }
@@ -273,10 +272,16 @@ right: 20px;
   }
   .grid-box-long {
     width: 100%;
+    margin-top: 0px;
   }
   .box-top-right{
     height: 334px;
     margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  .grid-bottom {
+    margin-bottom: 0px;
+    margin-top: 20px;
   }
   .text-inner-box2 {
     width: 44%;
@@ -301,8 +306,7 @@ right: 20px;
   }
   .box-tr-padding{
     padding-left: 0px;
-    padding-right: 0px;
-    padding-top: 0px;
+    margin-bottom: 0px;
   }
   .grid-bottom-padding {
     padding-right: 15px;
@@ -344,6 +348,9 @@ right: 20px;
     p {
       font-size: 1.2em;
     }
+  }
+  .grid-box-long{
+    margin-bottom: 0px;
   }
   .box-tr-padding {
     padding-left: 0px;
