--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
       <div class="navbar-links">
         <ul>
           <li class="nav-link" style="--i: .6s">
-            <a class="white">Services<i class="fas fa-caret-down rotate"></i></a>
+            <a href="#">Services<i class="fas fa-caret-down rotate"></i></a>
             <div class="dropdown">
               <ul>
                 <li class="dropdown-link">
