--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -303,3 +303,21 @@ header {
     padding: 1rem 2rem;
   }
 }
+
+/*Internet Explorer specific-size */
+@media all and (-ms-high-contrast: none),(-ms-high-contrast: active) {
+  .dropdown{
+    z-index: 1;
+  }
+  .body {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    display: auto;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+}
