--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,7 +5,7 @@ html,body
   padding: 0px;
   overflow-x: hidden;
   scroll-behavior: smooth;
-  display: flex;
+  // display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
@@ -534,6 +534,9 @@ right: 20px;
   }
   .banner {
     height: 97vh;
+  }
+  html,body {
+  display: auto;
   }
 }
 
