--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,8 +15,8 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/home";
-@import "pages/index";
-@import "pages/show";
+@import "pages/staff/index";
+@import "pages/staff/show";
 @import "components/team-images";
 @import "pages/videos";
 @import "blogs/index";
