--- a/app/views/staff/show.html.erb
+++ b/app/views/staff/show.html.erb
@@ -9,7 +9,8 @@
       <div class="medium-7 columns staff-job-desc">
         <h2 class="main-col"> <%= @staff.f_name %> <br> <%= @staff.l_name %></h2>
         <h3 class="white"> <%= @staff.job_title %></h3>
-        <h4> Something ought to fill this space, let's try it out </h4>
+        <br>
+        <h4> "Quote of the year" </h4>
       </div>
     </div>
   </div>
