--- a/app/views/staff/show.html.erb
+++ b/app/views/staff/show.html.erb
@@ -8,9 +8,9 @@
       </div>
       <div class="medium-7 columns staff-job-desc">
         <h2 class="main-col"> <%= @staff.f_name %> <br> <%= @staff.l_name %></h2>
-        <h3 class="white"> <%= @staff.job_title %></h3>
+        <h3 class="job-title-text"> <%= @staff.job_title %></h3>
         <br>
-        <h4> "Quote of the year" </h4>
+        <h5> "Quote of the year" </h5>
       </div>
     </div>
   </div>
