changes to opening-text

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
   <!-- ---------------------------- -->
 
   <div class="text-big" data-aos="fade-right">
-    <h2>BisImpact is a social impact consultancy that supports its clients to improve results in a meaningful way.</h2>
+    <h2 id="opening-text">BisImpact is a social impact consultancy that supports its clients to improve results in a meaningful way.</h2>
   </div>
 
   <!-- ---------css grid-------------- -->
