--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -75,6 +75,9 @@ html,body
 .banner-logo {
   width: 500px;
 }
+#opening-text{
+  margin-top: 20px;
+}
 .text-big {
   text-align: center;
   padding: 60px;
@@ -261,6 +264,9 @@ right: 20px;
   }
   .banner-logo {
     width: 240px;
+  }
+  #opening-text{
+    margin-top: 25px;
   }
   .text-big {
     padding: 30px;
