harmonisation of text

--- a/app/views/pages/design.html.erb
+++ b/app/views/pages/design.html.erb
@@ -31,18 +31,18 @@
 </div>
 <br>
 <br>
-<h1 class="text-center">OUR UNDERSTANDING</h1>
+<h1 class="services-bigtext">OUR UNDERSTANDING</h1>
 <br>
 <div class="container">
   <div class="content">
-    <p>In generations gone, the relationships we fostered and the human interactions we had were central to success. Though these elements are still important, we must now appreciate the role of technology. It allows us to reach newer places and enables a faster information distribution environment. Designing institutions that are cognisant of this new operating environment allows for social impact to be baked in from the offset. It is no longer an afterthought but something that can be targetted and planned for - both meticulously and powerfully.</p>
+    <p class="services-description">In generations gone, the relationships we fostered and the human interactions we had were central to success. Though these elements are still important, we must now appreciate the role of technology. It allows us to reach newer places and enables a faster information distribution environment. Designing institutions that are cognisant of this new operating environment allows for social impact to be baked in from the offset. It is no longer an afterthought but something that can be targetted and planned for - both meticulously and powerfully.</p>
     <br>
-    <h3 class="text-center">We leverage our past experiences in social impact to provide an unseen voice in supporting our clients' success when entering new markets or thematic areas.</h3>
+    <h3 class="services-description"><b>We leverage our past experiences in social impact to provide an unseen voice in supporting our clients' success when entering new markets or thematic areas.</b></h3>
   </div>
   <br>
 </div>
 <br>
-<h1 class="text-center">RECENT WORK</h1>
+<h1 class="services-bigtext">HOW WE CAN HELP</h1>
 <br>
 <div class="wraping-cards d-flex ">
   <div class="card" style="width: 18rem;">
