--- a/app/views/pages/transformation.html.erb
+++ b/app/views/pages/transformation.html.erb
@@ -31,20 +31,20 @@
 </div>
 <br>
 <br>
-<h1 class="text-center">OUR UNDERSTANDING</h1>
+<h1 class="services-bigtext">OUR UNDERSTANDING</h1>
 <br>
 <div class="container">
   <div class="content">
-    <p>Recent events have made the entire world think about the status-quo. Let us use the analogy of trees being cutdown in forests. Sometimes when an old tree is removed, there remains a gap. Soon however, new growth occurs - how institutions choose to respond to challenging circumstances is often an explanator of divergent outcomes.
+    <p class="services-description">Recent events have made the entire world think about the status-quo. Let us use the analogy of trees being cutdown in forests. Sometimes when an old tree is removed, there remains a gap. Soon however, new growth occurs - how institutions choose to respond to challenging circumstances is often an explanator of divergent outcomes.
     <br><br>
     BisImpact sees embracing change and transforming instiutions to be societal impact friendly/public good considering as central to collective success. Big institutions have seen a consolidation of their power; and as a result, small changes will have significant material impacts.</p>
     <br>
-    <h3 class="text-center">We work with institutions to identify existing processes that can rapidly be adapted to have wider positive social multipliers, and simultaneously ensure efficiency in service and product delivery.</h3>
+    <h3 class="services-description"><b>We work with institutions to identify existing processes that can rapidly be adapted to have wider positive social multipliers, and simultaneously ensure efficiency in service and product delivery.</b></h3>
   </div>
   <br>
 </div>
 <br>
-<h1 class="text-center">EXAMPLE WAYS OF HOW WE CAN HELP</h1>
+<h1 class="services-bigtext">HOW WE CAN HELP</h1>
 <br>
 <div class="wraping-cards d-flex ">
   <div class="card" style="width: 18rem;">
