--- a/app/views/pages/transformation.html.erb
+++ b/app/views/pages/transformation.html.erb
@@ -16,7 +16,7 @@
       <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604007344/New_York_fms682.jpg", class: "d-block w-100" %>
     </div>
     <div class="carousel-caption d-md-block">
-    <h1>Transformation</h1>
+    <h1 class="service-title">Transformation</h1>
     <p>Lorem ipsum dolor sit amet</p>
   </div>
   </div>
