--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -6,7 +6,19 @@
     opacity: 0.8;
 }
 
-.gg{
+.service-title {
   color: white;
-  
+  font-size: 4.5em;
+  -webkit-text-stroke: 1px black;
 }
+
+// -------------media query breakpoints-------
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .service-title {
+  color: rgba(129, 14, 49, 0.6);
+  font-size: 2.5em;
+  -webkit-text-stroke: 1.5px black;
+  }
+}
+
