--- a/app/assets/stylesheets/services/_design.scss
+++ b/app/assets/stylesheets/services/_design.scss
@@ -1,6 +1,7 @@
 .services-bigtext {
   color: #066579;
   text-align: center;
+  font-size: 3em;
 }
 
 .services-description {
@@ -8,3 +9,35 @@
   opacity: 0.8;
   font-size: 1.5em;
 }
+
+// -------------media query breakpoints-------
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .services-bigtext {
+    font-size: 1.4em;
+  }
+  .services-description {
+    font-size: 1em;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and upto 768px) */
+@media only screen and (min-width: 600px) and (max-width: 768px){
+  .services-bigtext {
+    font-size: 2.5em;
+  }
+  .services-description {
+    font-size: 1.2em;
+  }
+}
+
+/* Medium devices (portrait-mode tablets, 768px and up) */
+@media screen and (min-width: 768px) and (orientation: portrait){
+  .services-bigtext {
+    font-size: 3em;
+  }
+  .services-description {
+    font-size: 1.5em;
+  }
+}
+
