--- a/app/views/pages/design.html.erb
+++ b/app/views/pages/design.html.erb
@@ -16,7 +16,7 @@
       <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1604009347/Rwanda_roads_ktn1gn.jpg", class: "gg d-block w-100 gg" %>
     </div>
     <div class="carousel-caption d-md-block">
-    <h1 class="gg">Design</h1>
+    <h1 class="service-title">Design</h1>
     <p>Lorem ipsum dolor sit amet</p>
   </div>
   </div>
