--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -16,7 +16,7 @@
       <%= cl_image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603922036/Tanzania_white_xrns7y.jpg", class: "gg d-block w-100 gg" %>
     </div>
     <div class="carousel-caption  d-md-block">
-    <h1>Sustainability</h1>
+    <h1 class="service-title">Sustainability</h1>
     <p>Lorem ipsum dolor sit amet</p>
   </div>
   </div>
