--- a/app/assets/stylesheets/pages/staff/_show.scss
+++ b/app/assets/stylesheets/pages/staff/_show.scss
@@ -1,7 +1,3 @@
-.staff-card {
-  display: flex;
-  flex-direction: row;
-}
 .staff-info {
   display: flex;
 }
@@ -9,26 +5,10 @@
   margin: 0 auto;
   width: 90%;
 }
-.staff-name {
-  margin-top: 16px;
-  text-align: center;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-    h2 {
-      font-size: 42px;
-    }
-    p {
-      font-size: 36px;
-    }
-}
 .job-title-text {
-  color: white;
   text-align: center;
   margin-top: 0;
-  color: #fff;
+  color: $second-color;
   letter-spacing: 0.15rem;
   font-family: "proxima-nova","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: lighter;
@@ -56,7 +36,7 @@ p {
   margin: 0 auto;
   text-align: center;
 }
-.team-bio-header{
+.team-show-background{
   background-color: #066579;
 }
 .block {
@@ -83,27 +63,22 @@ p {
   justify-content: space-between;
 }
 
-.team-bio-header h2 {
+.team-show-background h2 {
+  color: $second-color;
   text-align: center;
   margin-top: 0;
-  color: #fff;
   font-size: 6.5vw;
   font-family: "adobe-caslon-pro",serif;
-  font-weight: normal;
-  font-style: normal;
   text-rendering: optimizeLegibility;
-  margin-bottom: .5rem;
   line-height: 1.1;
 }
 
-.team-bio-header h5 {
+.team-show-background h5 {
   text-align: center;
   margin-top: 0;
-  color: #fff;
+  color: $second-color;
   letter-spacing: 0.1rem;
-  font-family: "proxima-nova","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: lighter;
-  font-style: normal;
 }
 
 /* Large devices (landscape/desktops, 992px and up) */
@@ -122,9 +97,6 @@ p {
     max-width: 320px;
     object-fit: cover;
     border-radius: 5px 0px 0px 5px;
-  }
-  .staff-card {
-    flex-direction: column;
   }
   .staff-info {
     flex-direction: column;
