--- a/app/views/staff/show.html.erb
+++ b/app/views/staff/show.html.erb
@@ -1,7 +1,7 @@
 <div class="staff-container">
   <br>
   <br>
-  <div class="block team-bio-header content dark ">
+  <div class="block team-show-background content dark ">
     <div class="rows vertical-center-row">
       <div class="medium-5 columns">
         <%= cl_image_tag @staff.image.key, class: "staff-image" %>
