--- a/app/views/staff/show.html.erb
+++ b/app/views/staff/show.html.erb
@@ -1,12 +1,12 @@
 <div class="staff-container">
   <br>
   <br>
-  <div class="block team-show-background content dark ">
+  <div class="block team-show-background">
     <div class="rows vertical-center-row">
-      <div class="medium-5 columns">
+      <div>
         <%= cl_image_tag @staff.image.key, class: "staff-image" %>
       </div>
-      <div class="medium-7 columns staff-job-desc">
+      <div class="staff-job-desc">
         <h2 class="main-col"> <%= @staff.f_name %> <br> <%= @staff.l_name %></h2>
         <h3 class="job-title-text"> <%= @staff.job_title %></h3>
         <br>
