--- a/app/views/pages/transformation.html.erb
+++ b/app/views/pages/transformation.html.erb
@@ -88,9 +88,9 @@
     </ul>
     <ul class="inline">
       <strong>Address</strong>
-      <li>123 London Road</li>
+      <li>Wood Green</li>
       <li>London</li>
-      <li>SW1U 1TE</li>
+      <li>N22</li>
       <li>UK</li>
     </ul>
 </div>
