--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -30,4 +30,11 @@
   </div>
 
 </div>
-<%= link_to 'Back', root_path, class: "home-link text-center" %>
+<div class="text-center">
+  <%= link_to 'Back', root_path, class: "btn blue" %>
+</div>
+<br>
+<br>
+
+
+
