--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -36,4 +36,15 @@
   <p>Author - <%= @blog.author %> <br> <%= @blog.author_info %></p>
   <p><%= @blog.hashtags %> </p>
 </div>
-  <%= link_to 'Back', blogs_path, class: "home-link text-center" %>
+<br>
+<div class="text-center">
+  <%= link_to 'Back', blogs_path, class: "btn blue" %>
+</div>
+<br>
+<br>
+
+
+
+
+
+
