--- a/app/views/pages/transformation.html.erb
+++ b/app/views/pages/transformation.html.erb
@@ -52,7 +52,6 @@
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn blue">Find out more</a>
   </div>
 </div>
 
@@ -61,7 +60,6 @@
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn blue">Find out more</a>
   </div>
 </div>
 
@@ -70,13 +68,12 @@
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn blue">Find out more</a>
   </div>
 </div>
 </div>
 <br>
 <br>
-<h1 class="text-center"><%= link_to 'Meet Our Team', staff_index_path %></h1>
+<h1 class="text-center"><%= link_to 'Meet Our Team', staff_index_path, class: "btn blue " %></h1>
 <br>
 <br>
 <div  class="contacts">
