--- a/app/views/pages/videos.html.erb
+++ b/app/views/pages/videos.html.erb
@@ -1,9 +1,11 @@
+<br>
 <div class=" text-center mt-5 wrap-videos">
-  <h2>Courage and belief can yield unexpected outcomes</h2>
-  <p>The best pieces of advice in life are those that enable you to unlock your full potential</p>
+  <h2 class="services-bigtext">Courage and belief can yield unexpected outcomes</h2>
+  <p class="main">The best pieces of advice in life are those that enable you to unlock your full potential</p>
+  <br>
   <div class="videos" id="video">
 
       <iframe width="70%" height="515" src="https://www.youtube.com/embed/Ve2yUJTeRfc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      
+
   </div>
 </div>
