--- a/app/assets/stylesheets/pages/staff/_show.scss
+++ b/app/assets/stylesheets/pages/staff/_show.scss
@@ -17,6 +17,11 @@ p {
 }
 .staff-contact {
   padding: 30px;
+  p {
+    display: flex;
+    flex-direction: row;
+  }
+
 }
 .staff-bio {
   padding: 30px;
@@ -84,11 +89,11 @@ p {
   .rows {
     display: flex;
   }
-}  
+}
 
 /* Medium devices (landscape tablets, 800px and up) */
 @media only screen and (max-width: 800px) {
- 
+
   .staff-image {
     text-align: center;
     align-items: center;
