--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -117,12 +117,47 @@
   </div>
   <!-- -------------------contacts div ---------->
   <div id="contacts" class="contacts">
-    <ul class="inline">
+    <strong>Contact Us</strong>
+
+    <%= form_for @contact_form do |f| %>
+     <div class="field">
+       <%= f.label :name %>
+      <%= f.text_field :name, :required => true %>(required)<br /><br><br>
+     </div>
+     <div class="field">
+      <%= f.label :email %>
+      <%= f.email_field :email, :required => true %>(required)
+      <br /><br><br>
+     </div>
+      <div class="field">
+      <%= f.label :phone %>
+      <%= f.phone_field :phone %><br /><br><br>
+     </div>
+      <div class="field">
+      How did you hear about us?:<br /> <%= f.text_field :referral
+      %><br /><br><br>
+     </div>
+      <div class="field">
+      Comments (What types of wine are you
+      interested in?):<br / <%= f.text_area :message %><br /><br><br>
+    </div>
+     <div class="field">
+      Submit: <%= f.submit "Create" %>
+    </div>
+
+    <% end %>
+
+
+
+
+
+
+    <!-- <ul class="inline">
       <strong>Contacts</strong>
-      <li>Tel: 0208 923 213</li>
-      <li>Mob: 0758 6738382</li>
-      <li>email: contact@bisimpact.com</li>
-    </ul>
+      <li><i class="fas fa-phone-alt"></i> Tel: 0208 923 213</li>
+      <li><i class="fas fa-mobile-alt"></i>   Mob: 0758 6738382</li>
+      <li><i class="fas fa-envelope-open-text"></i> email: contact@bisimpact.com</li>
+    </ul> -->
     <ul class="inline">
       <strong>Address</strong>
       <li>Wood Green</li>
@@ -132,7 +167,7 @@
     </ul>
   <!-- -------------google map------- -->
     <div class="map-wrapper">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2478.418651478061!2d-0.11219868398350624!3d51.59721727964991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761be2449ab987%3A0x39f4a9a9893c4b68!2sWood%20Green%20tube%20station!5e0!3m2!1sen!2suk!4v1604842506483!5m2!1sen!2suk" width="400" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="map-width"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2478.418651478061!2d-0.11219868398350624!3d51.59721727964991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761be2449ab987%3A0x39f4a9a9893c4b68!2sWood%20Green%20tube%20station!5e0!3m2!1sen!2suk!4v1604842506483!5m2!1sen!2suk" width="100%" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="map-width"></iframe>
     </div>
   </div>
 </div>
