--- a/app/views/staff/index.html.erb
+++ b/app/views/staff/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <br>
   <br>
-  <h1 >Experienced,
+  <h1 class="services-bigtext">Experienced,
   trusted experts</h1>
   <br>
   <h3 class="main-col">Our Team</h3>
@@ -9,6 +9,7 @@
   <section class="abc">
   <%= render 'shared/team-images'%>
   </section>
-  <%= link_to 'Back', root_path, class: "home-link" %>
-
+  <%= link_to 'Back', root_path, class: "btn blue" %>
+  <br>
+  <br>
 </div>
