--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -222,6 +222,32 @@ html,body
 }
 
 // ---------------------contacts div----------------------
+.form {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid $main-color;
+  border-radius: 10px;
+  // width: 35%;
+  margin: 0 auto;
+  label {
+    color: $main-color;
+    font-size: 18px;
+  }
+  input {
+    background-color: rgb(250,250,250);
+    border-radius: 10px;
+    width: 80%;
+    border: 2px solid $main-color;
+  }
+  .text-area {
+    height: 130px;
+    width: 80%;
+    background-color: rgb(250,250,250);
+    border-radius: 10px;
+    border: 2px solid $main-color;
+  }
+}
+
 .map-wrapper {
   border:5px solid $main-color;
   border-radius: 5px;
@@ -329,9 +355,6 @@ right: 20px;
     height:230px;
     width: 310px;
     margin: 0 auto;
-    .map-width {
-      width: 300px;
-    }
   }
   .contacts {
     display: block;
@@ -534,6 +557,9 @@ right: 20px;
         margin: 0 auto;
         padding-top: 50px;
       }
+  }
+  .form {
+    width: 35%;
   }
 }
 /*Internet Explorer specific-size */
