--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,9 +53,9 @@
     </div>
 
     <div class="row second-wrap">
-      <div class="col-lg-3 col-md-12 grid-bottom-padding">
-        <div class="grid-bottom">
-          <%= cl_image_tag("https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603925462/Emerging_City_k8lenn.jpg", class: "grid-bottom-image") %>
+      <div class="col-lg-3 col-md-12 box-bl-padding">
+        <div class="box-bottom-left">
+          <%= cl_image_tag("https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603925462/Emerging_City_k8lenn.jpg", class: "box-bottom-left-image") %>
           <div class="text-inner">
             <p>Lorem ipsum, dolor sit.</p>
           </div>
