lots of changes to styling

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -417,6 +417,7 @@ right: 20px;
   }
   .box-bottom-left-image {
     height: 100%;
+    object-fit: cover;
   }
   .grid-bottom {
     margin-top: 20px;
@@ -511,6 +512,7 @@ right: 20px;
   }
   .box-bottom-left-image {
     height: 430px;
+    object-fit: cover;
   }
   .grid-bottom-padding {
     padding-right: 15px;
@@ -574,6 +576,7 @@ right: 20px;
   }
   .box-bottom-left-image {
     height: 290px;
+    object-fit: cover;
   }
   .box-bl-padding {
     padding-right: 8px;
