--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -38,7 +38,7 @@
 </div>
 <br>
 <div class="text-center">
-  <%= link_to 'Back', blogs_path, class: "btn blue" %>
+  <%= link_to 'Back', blogs_path, class: "btn blue button-custom" %>
 </div>
 <br>
 <br>
