--- a/app/views/staff/show.html.erb
+++ b/app/views/staff/show.html.erb
@@ -30,7 +30,7 @@
     </div>
   </div>
   <div class="text-center">
-    <%= link_to 'Back', staff_index_path, class: "btn blue" %>
+    <%= link_to 'Back', staff_index_path, class: "btn blue button-custom" %>
   </div>
   <br>
   <br>
