--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -31,7 +31,7 @@
 
 </div>
 <div class="text-center">
-  <%= link_to 'Back', root_path, class: "btn blue" %>
+  <%= link_to 'Back', root_path, class: "btn blue button-custom" %>
 </div>
 <br>
 <br>
