--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -71,7 +71,7 @@
 </div>
 <br>
 <br>
-<h1 class="text-center"><%= link_to 'Meet Our Team', staff_index_path, class: "btn blue " %></h1>
+<h1 class="text-center"><%= link_to 'Meet Our Team', staff_index_path, class: "btn blue button-custom" %></h1>
 <br>
 <br>
 <div  class="contacts">
