--- a/app/views/staff/index.html.erb
+++ b/app/views/staff/index.html.erb
@@ -9,7 +9,8 @@
   <section class="abc">
   <%= render 'shared/team-images'%>
   </section>
-  <%= link_to 'Back', root_path, class: "btn blue" %>
+  <br>
+  <%= link_to 'Back', root_path, class: "btn blue button-custom" %>
   <br>
   <br>
 </div>
