--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -193,6 +193,7 @@ html,body
   width: 100%;
   text-align: center;
   padding-top: 10px;
+  padding-bottom: 10px;
   font-size: 16.5px;
   color: $second-color;
   position: absolute;
@@ -359,6 +360,7 @@ right: 20px;
   .text-inner {
     padding-top: 10px;
     font-size: 12px;
+    padding-bottom: 10px;
   }
   .text-inner-box3 {
     font-size: 12px;
