--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,7 +38,7 @@
         <div class="grid-box-long">
           <%= image_tag "Turkey-Cityscape.jpg", class: "grid-box-image-long" %>
           <div class="text-inner-box2">
-            <p>Trade is central to economic growth. Digital solutions that facilitate new operating mechanisms are critical in sustaining prosperity. </p>
+            <p>Content Coming. </p>
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
         <div class="box-bottom-left">
           <%= cl_image_tag("https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603925462/Emerging_City_k8lenn.jpg", class: "box-bottom-left-image") %>
           <div class="text-inner">
-            <p>Lorem ipsum, dolor sit.</p>
+            <p>Trade is central to economic growth. Digital solutions ever more crucial.</p>
           </div>
         </div>
       </div>
