--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -122,7 +122,7 @@
       <h2 class="services-bigtext">Contact Us</h2>
       <div class="pt-3">
         <form
-          action="https://formspree.io/f/maylbwra"
+          action="https://formspree.io/f/xvovqkpz"
           method="POST"
           class=" text-center form pt-4"
         >
