--- a/app/views/staff/show.html.erb
+++ b/app/views/staff/show.html.erb
@@ -19,11 +19,14 @@
 
   <div class="staff-info ">
     <div class="staff-contact">
-      <strong class="main-col">Contact <%= @staff.f_name %> </strong>
+      <h5><strong class="main-col">Contact <%= @staff.f_name %> </strong></h5>
+
       <br>
       <br>
-      <p class="main-col"><i class="pr-2 fas fa-mobile-alt"></i>  <%= @staff.phone %> </p>
+      <p><a href=" <%= @staff.link %> " target="blanked" class="linked-in"><i class="fab fa-linkedin"></i></a></p>
+
       <p class="main-col"><i class="pr-2 fas fa-envelope-open-text"></i>  <%= @staff.email %> </p>
+
     </div>
     <div class="staff-bio">
       <p class="main-col"> <%= simple_format(@staff.bio) %></p>
