--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
       <p class="news">Latest News</p>
     </div>
     <div class="marquee">
-      <p> Black Lives Matter. We are currently expanding our network of consultants. If you consider yourself to be a self-starter, but at the same time, someone who wants to make a genuine positive difference, do get in touch. Newcastle United struggled past Newport County. Hapless performance from a hapless team. </p>
+      <p> Black Lives Matter. We are currently expanding our network of consultants. If you consider yourself to be a self-starter, but at the same time, someone who wants to make a genuine positive difference, do get in touch. 2020 has presented a whole set of new challenges; we wish everyone good health and normality in their daily lives. </p>
     </div>
   </div>
 
@@ -32,13 +32,13 @@
         <div class="grid-box-long">
           <%= image_tag "China-Agriculture.jpg", class: "grid-box-image-long" %>
           <div class="text-inner-box">
-            <p>In many countries, agriculture value-chains are a major source of income. With the prevalance of women in the agricultural labour force, there is great potential to transform the livelihoods of many.</p>
+            <p>In many countries, agriculture <b> value-chains </b> are a major source of income. <b> Women </b> are often disproportionately represented in low income generating segments.</p>
           </div>
         </div>
         <div class="grid-box-long">
           <%= image_tag "Turkey-Cityscape.jpg", class: "grid-box-image-long" %>
           <div class="text-inner-box2">
-            <p>Content Coming. </p>
+            <p><b>Tourism</b> often supports multiple <b>livelihoods</b>; working with individuals within these industries will be critical to appropriate Covid-19 economic recovery.</p>
           </div>
         </div>
       </div>
@@ -46,7 +46,7 @@
         <div class="box-top-right">
           <%= image_tag "Miyajima-Japan.jpg", class: "box-top-right-image" %>
           <div class="text-inner-box3">
-            <p>Human action is having a devastating impact on our oceans, seas and the wider ecosystem. Behavioural change has to be carefully planned.</p>
+            <p>Human action is having a devastating impact on our oceans, seas and the wider ecosystem. <b> Behavioural change </b> has to be carefully planned.</p>
           </div>
         </div>
       </div>
@@ -57,7 +57,7 @@
         <div class="box-bottom-left">
           <%= cl_image_tag("https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603925462/Emerging_City_k8lenn.jpg", class: "box-bottom-left-image") %>
           <div class="text-inner">
-            <p>Trade is central to economic growth. Digital solutions ever more crucial.</p>
+            <p> <b> Trade</b> is central to economic growth. <b>Digital mechanisms</b> ever more crucial.</p>
           </div>
         </div>
       </div>
@@ -65,7 +65,7 @@
         <div class="grid-bottom">
           <%= image_tag "https://res.cloudinary.com/dhoxwyrvn/image/upload/v1605129790/NewYork-Traffic_d2ymzv.jpg", class: "grid-bottom-image" %>
           <div class="text-inner-box3">
-            <p>Though rural-urban migration has increased, preserving anicent ways of living helps retain many of the cultural practices we have come to celebrate. </p>
+            <p>Large urban centres continue to amaze the world, finding solutions to <b>congestion </b>, <b> urban poverty </b> and <b> inequality </b> requires sustained innovation. </p>
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
         <div class="grid-bottom">
           <%= image_tag "Kathmandu-Business.jpg", class: "grid-bottom-image" %>
           <div class="text-inner">
-            <p>Growing domestic businesses solving localised problems can rapidly create many jobs.</p>
+            <p>Growing domestic businesses solving localised problems can rapidly <b> create </b> many <b> jobs</b>.</p>
           </div>
         </div>
       </div>
