--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -192,8 +192,7 @@ html,body
   background: rgba(6, 101, 121, 0.8);
   width: 100%;
   text-align: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 5px;
   font-size: 16.5px;
   color: $second-color;
   position: absolute;
@@ -205,7 +204,7 @@ html,body
   width: 100%;
   font-size: 16.5px;
   text-align: center;
-  padding-top: 10px;
+  padding: 5px;
   color: $second-color;
   position: absolute;
   bottom: 0;
@@ -215,7 +214,7 @@ html,body
   background: rgba(6, 101, 121, 0.8);
   width: 40%;
   text-align: center;
-  padding-top: 10px;
+  padding: 10px 5px 5px 5px;
   color: $second-color;
   position: absolute;
   top: 0;
@@ -226,7 +225,7 @@ html,body
   background: rgba(169, 130, 15, .8);
   width: 40%;
   text-align: center;
-  padding-top: 10px;
+  padding: 13px;
   color:  $second-color;
   position: absolute;
   top: 0;
@@ -354,13 +353,10 @@ right: 20px;
   }
   }.text-inner-box {
     width: 44%;
-    padding: 20px 0px;
     font-size: 12px;
   }
   .text-inner {
-    padding-top: 10px;
     font-size: 12px;
-    padding-bottom: 10px;
   }
   .text-inner-box3 {
     font-size: 12px;
@@ -438,12 +434,12 @@ right: 20px;
   }
   .text-inner-box {
     width: 39%;
-    padding: 10px 0px;
     font-size: 14.5px;
+    padding: 12px;
   }
   .text-inner-box2 {
     width: 39%;
-    padding: 35px 0px;
+    padding: 25px 5px 0px 5px;
     font-size: 14.5px;
   }
   .text-inner {
@@ -520,8 +516,8 @@ right: 20px;
     padding-right: 15px;
   }
   .text-inner-box {
+    padding: 35px 10px 0px 10px;
     width: 45%;
-    padding: 5px 0px;
     font-size: 16.5px;
   }
   .text-inner {
@@ -597,7 +593,10 @@ right: 20px;
     padding-right: 7px;
   }
   .text-inner-box {
-    padding-top: 22px;
+    padding: 9px;
+  }
+  .text-inner-box2 {
+    padding: 15px 5px 5px 5px;
   }
   .back-to-top {
     font-size: 3.5em;
