--- a/app/views/pages/design.html.erb
+++ b/app/views/pages/design.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="carousel-caption d-md-block">
     <h1 class="service-title">Design</h1>
-    <p>Lorem ipsum dolor sit amet</p>
+    <p class="service-text">Anticipate from the start</p>
   </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
