show-page changes

--- a/app/assets/stylesheets/pages/staff/_show.scss
+++ b/app/assets/stylesheets/pages/staff/_show.scss
@@ -27,6 +27,9 @@ p {
     color: $main-color;
     font-size: 40px;
   }
+  .linked-in:hover {
+    color: rgba(129, 14, 49, 1);
+  }
   h5 {
     display: flex;
     justify-content: center;
